--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -1,8 +1,9 @@
 .container {
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     position: relative;
-
+    display: flex;
+    overflow: hidden;
 }
 
 .backgroundImage {
