--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@
 
 body,
 html {
-  width: 100%;
-  height: 100%;
-  overflow-x: hidden;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
 }
